--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="stoles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
 
     <title>Hello, world!</title>
